--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,34 @@
+//launch.json
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "lldb",
+            "name": "debug xv6",
+            "type": "cppdbg",
             "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/test/test",
+            "program": "${workspaceFolder}/kernel/kernel",
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
+            "miDebuggerServerAddress": "127.0.0.1:26000",
+            //这里实际上可以用各种能调试的gdb，如果找不到你可以使用which gdb-multiarch
+            "miDebuggerPath": "/usr/bin/gdb-multiarch",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "preLaunchTask": "xv6build",
+            "setupCommands": [
+                {
+                    "description": "pretty printing",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true,
+                },
+            ],
+            //用于gdb调试的工具，可以发现gdb出错的原因
+            // "logging": {
+            //     "engineLogging": true,
+            //     "programOutput": true,
+            // }
         }
     ]
 }
